--- a/EnglishAcademy.API/EnglishAcademy.API.csproj
+++ b/EnglishAcademy.API/EnglishAcademy.API.csproj
@@ -8,6 +8,8 @@
   <ItemGroup>
     <Folder Include="Entities\" />
     <Folder Include="DbContexts\" />
+    <Folder Include="Controllers\" />
+    <Folder Include="Services\" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.5" />
@@ -16,5 +18,7 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
+    <PackageReference Include="AutoMapper" Version="9.0.0" />
+     <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="3.1.3" />
   </ItemGroup>
 </Project>
