--- a/EnglishAcademy.API/EnglishAcademy.API.csproj
+++ b/EnglishAcademy.API/EnglishAcademy.API.csproj
@@ -20,5 +20,6 @@
     </PackageReference>
     <PackageReference Include="AutoMapper" Version="9.0.0" />
      <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="3.1.3" />
+     <PackageReference Include="Microsoft.AspNetCore.JsonPatch" Version="3.1.5" />
   </ItemGroup>
 </Project>
